[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Drew Adlof <drew.adlof@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# Dev dependencies are usedexclusively whenrunning testsorexamples
# Theydo not get included inthe finalapplicationbinary!
[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = "0.14"
